--- a/login.css
+++ b/login.css
@@ -9,17 +9,21 @@ body {
 header {
   display: flex;
   margin: 0;
+  height: 150px;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   margin-bottom: 10px;
   padding: 0;
 }
 header img {
-  width: 280px;
-  height: 40px;
-  margin-top: 5%;
+  width: 500px;
+  height: 80px;
 }
 .form-container {
   width: 100%;
-  height: 300px;
+  height: 350px;
   background: #ffd646;
 }
 form {
@@ -35,10 +39,11 @@ form label {
 
 form input {
   width: 80%;
-  background: #fff;
+  background-color: #d9d9d9;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
-  height: 25px;
-  border-radius: 10px;
+  padding: 10px;
+  height: 20px;
+  border-radius: 15px;
   border: none;
 }
 form div {
@@ -67,6 +72,13 @@ footer span p {
   height: 60px;
 }
 #submit {
+  padding: 30px;
   width: 50%;
-  background: #ffc90a;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 25px;
+  margin-bottom: 10%;
+  background-color: #fff;
 }
