--- a/home.css
+++ b/home.css
@@ -48,7 +48,6 @@ form input {
   flex-direction: column;
 }
 .p {
-  margin-right: 45%;
   width: 100%;
 }
 .message {
@@ -58,24 +57,48 @@ form input {
   height: 80px;
   background-color: #d9d9d9;
 }
-.submit {
+#submit {
   padding: 28px;
   text-align: center;
   border-radius: 25px;
 }
-select {
-  margin: 0;
-  outline: 0;
-  box-shadow: none;
-  border: 0 !important;
-  cursor: pointer;
-  width: 74%;
-  background: #fff;
-  background-color: #d9d9d9;
+.historyContent {
+  width: 100%;
+  background-color: #ffd646;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+.trans {
+  display: flex;
+  width: 25%;
+  margin-top: 20px;
+  border-radius: 21px;
+  margin-left: 45px;
+  margin-bottom: 15px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 20px;
-  padding: 15px;
-  border: none;
+  padding: 10px 20px;
+  justify-content: center;
+  flex-direction: column;
+}
+.trans:nth-child(odd) {
+  background-color: #d9d9d9;
+}
+.trans:nth-child(even) {
+  background-color: #fff;
+}
+.trans:nth-child(1) {
+  display: none;
+}
+h1 {
+  margin: 0 40px;
+}
+span {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 @media (max-width: 768px) {
   form {
@@ -87,7 +110,7 @@ select {
     position: relative;
   }
   form div {
-    width: 90%;
+    width: 100%;
   }
   header {
     justify-content: center;
@@ -96,60 +119,19 @@ select {
     width: 200px;
     height: auto;
   }
+  form input {
+    width: 100%;
+  }
   .p {
     margin-right: 0;
     font-size: 15px;
   }
-}
-.historyContent {
-  width: 100%;
-  height: auto;
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: 10%;
-}
-.trans {
-  display: flex;
-  width: 25%;
-  margin-top: 20px;
-  border-radius: 21px;
-  margin-left: 45px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
-  padding: 10px 20px;
-  justify-content: center;
-  flex-direction: column;
-}
-.trans:nth-child(odd) {
-  background-color: #d9d9d9;
-}
-.trans:nth-child(even) {
-  background-color: #ffd646;
-}
-.trans:nth-child(1) {
-  display: none;
-}
-h1 {
-  margin-left: 40px;
-}
-span {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-}
-.number {
-  display: flex;
-  width: 100%;
-}
-.number input:nth-child(2) {
-  width: 34%;
-  border-radius: 0 30px 30px 0;
-  box-shadow: 0px 4px 4px 0 rgba(0, 0, 0, 0.25);
-  padding: 15px;
-}
-.number select {
-  width: 24%;
-  border-radius: 30px 0 0 30px;
-  box-shadow: 0px 4px 4px 0 rgba(0, 0, 0, 0.25);
+  .part {
+    width: 100%;
+  }
+  .trans {
+    width: 80%;
+    flex-direction: column;
+    margin-left: 20px;
+  }
 }
