--- a/login.css
+++ b/login.css
@@ -4,12 +4,14 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  overflow: hidden;
   align-items: center;
 }
 header {
   display: flex;
   margin: 0;
   height: 150px;
+  overflow: hidden;
   width: 100%;
   justify-content: center;
   align-items: center;
@@ -31,6 +33,7 @@ form {
   width: 90%;
   display: flex;
   flex-wrap: wrap;
+  overflow: hidden;
 }
 form label {
   margin-top: 10px;
@@ -39,7 +42,7 @@ form label {
 
 form input {
   width: 80%;
-  background-color: #d9d9d9;
+  background-color: #fff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
   padding: 10px;
   height: 20px;
@@ -58,6 +61,10 @@ footer span {
   justify-content: center;
   align-items: center;
   text-align: center;
+}
+footer {
+  position: absolute;
+  bottom: 2%;
 }
 footer span img {
   width: 20px;
@@ -81,4 +88,45 @@ footer span p {
   border-radius: 25px;
   margin-bottom: 10%;
   background-color: #fff;
+}
+@media (max-width: 768px) {
+  form {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    overflow: hidden;
+  }
+  .submit-container {
+    position: relative;
+  }
+  header {
+    width: 90%;
+  }
+  form div {
+    width: 100%;
+    margin: 10px 15px;
+  }
+  header img {
+    width: 200px;
+    height: auto;
+  }
+  form input {
+    width: 80%;
+    background-color: #fff;
+  }
+  form label {
+    margin-top: 0;
+  }
+  .p {
+    margin-right: 0;
+    font-size: 15px;
+  }
+  h2 {
+    font-size: 18px;
+    width: 80%;
+    text-align: center;
+  }
+  #submit {
+    background-color: #ffd646;
+  }
 }
